fix: table height collapse when width insufficient

--- a/src/table/table-scroll.scss
+++ b/src/table/table-scroll.scss
@@ -17,7 +17,6 @@ $stickyCssClass: 'aui-table-sticky';
   @include scroll-bar;
 
   .aui-table {
-    max-height: 100%;
     padding: 0;
     border-radius: 0;
   }
